--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@ language: "" # language to set into html tag, default is en
 
 # User settings
 
-author: Wendell Adriel
-author-title: Full Stack Developer
+author: Bruno Willian Andrade
+author-title: Back-end and Games Developer
 gravatar: d36a082aacb53b6f76869748fb4b81d4
-email: wendelladriel.ti@gmail.com
-twitter: wendell_adriel
-github: WendellAdriel
+email: brunowillianandrade@gmail.com
+#twitter: wendell_adriel
+github: RatoZumbi
 googleplus: +WendellAdriel
-facebook: wendell.adriel.7
-linkedin: wendelladrielti/en
+facebook: bruno.willian
+#linkedin: wendelladrielti/en
 bio: "Brazilian developer. Game, music and technology lover.
       I graduated in Systems Analysis and Development. I'm a Zend Certified PHP Engineer and Scrum Fundamentals Certified. I love to study and learn new skills,
       exchange work and study experience with people around me and share my knowledge with the ones that want it. I work with Web Development since 2009 and with
