--- a/_config.yml
+++ b/_config.yml
@@ -15,15 +15,14 @@ github: RatoZumbi
 googleplus: +BrunoWillianAndrade
 facebook: bruno.willian
 #linkedin: bruno-willian-andrade-1611a065
-bio: "Brazilian developer. Game, music and technology lover.
-      I am graduated in Systems Analysis and Development and I have a post-degree in Production and Development of Games.
-      I love to study and learn new skills, exchange work and share my knowledge with the ones that want it. I work with Back-end Development since 2010 and with
-      Games Development since 2013.
-      You can find my published games in google play
-      https://play.google.com/store/apps/developer?id=Bruno+Willian+Andrade
-      And some other projects here in
-      https://github.com/ratozumbi 
-      I like to work with both: Back-End development. I work with many languages, frameworks and technologies."
+bio:Brazilian developer. Game, music and technology enthusiast. I graduated in Systems Analysis
+and Development and I have a post-degree in Production and Development of Games. I love to
+study and learn new skills, exchange work and share my knowledge with anyone that is
+interested. I’ve been working with Back-end Development since 2010 and with Games
+Development since 2013. You can find my published games in google play
+https://play.google.com/store/apps/developer?id=Bruno+Willian+Andrade and some other
+projects here in https://github.com/ratozumbi I like to work with both:Games development and Back-End
+development. I work with many languages, frameworks and technologies. 
 
 # Skills
 #
